syntax = "proto3";
package blog.blog;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "blog/x/blog/types";

// Msg defines the Msg service.
service Msg {
  rpc CreatePost(MsgCreatePost) returns (MsgCreatePostResponse);
  rpc CreateComment(MsgCreateComment) returns (MsgCreateCommentResponse);
  rpc DeleteComment(MsgDeleteComment) returns (MsgDeleteCommentResponse);
}

message MsgCreatePost {
  string creator = 1;
  string title = 2;
  string body = 3;
}

message MsgCreatePostResponse {
  uint64 id = 1;
}

message MsgCreateComment {
  string creator = 1;
  uint64 postID = 2;
  string title = 3;
  string body = 4;
}

message MsgCreateCommentResponse {
  uint64 id = 1;
}

message MsgDeleteComment {
  string creator = 1;
  uint64 commentID = 2;
  uint64 postID = 3;
}

message MsgDeleteCommentResponse {
  uint64 id = 1;
}


// this line is used by starport scaffolding # proto/tx/message
